<resources>
    <string name="app_name">StudentInfo</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name</string>
    <string name="percentage">Percentage</string>
    <string name="roll_no">Roll No</string>
    <string name="student_name">Student Name</string>
    <string name="maths_mark">Maths Mark</string>
    <string name="science_mark">Science Mark</string>
    <string name="english_mark">English Mark</string>
    <string name="submit_data">Submit Data</string>
</resources>
