<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/padding"
    android:layout_margin="@dimen/margin_row_item"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/TextView.Medium"
                android:layout_weight="1"
                android:text="@string/name"
                android:maxLines="1"
                android:ellipsize="end" />

            <TextView
                android:id="@+id/tv_name"
                style="@style/TextView.Medium"
                android:layout_weight="1"
                android:maxLines="1"
                android:ellipsize="end"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/TextView.Medium"
                android:layout_weight="1"
                android:maxLines="1"
                android:ellipsize="end"
                android:text="@string/roll_no"
                />

            <TextView
                android:id="@+id/tv_roll_no"
                style="@style/TextView.Medium"
                android:layout_weight="1"
                android:maxLines="1"
                android:ellipsize="end"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/TextView.Medium"
                android:layout_weight="1"
                android:maxLines="1"
                android:ellipsize="end"
                android:text="@string/percentage"/>

            <TextView
                android:id="@+id/tv_percentage"
                style="@style/TextView.Medium"
                android:layout_weight="1"
                android:maxLines="1"
                android:ellipsize="end"/>

        </LinearLayout>

    </LinearLayout>



</android.support.v7.widget.CardView>